0.2.0
Set desktop names on start.
Fixed minor compiler complaint.
Fixed segfault for unreachable icon in desktop file.
Fixed not displaying items as links properly.
Added custom icons to desktop files.
Fixed double click on items.
Fixed desktop hang when opening file again!
Changed lfstk required lib version.
Fixed desktop hang when opening file.
Added check for external mimetype perl module.
Removed findmt external command.
Various visual tweaks;
Fixed label fg/bg/alpha colours.
Fixed label font.
Fixed changing prefs.
Fixed dNd after manual delete of item from desktop.
Fixed bad filename when dropping text onto desktop.
Fixed changing disk label size.
Fixed changing disk label.
Fixed eroneous symlink icon on new disks.
Fixed usb's being inserted.
Fixed messaging. 
Fixed memory leaks.
Fixed popup labels.
Major code changes,
Updated for new lfstk API.

0.1.3
Fixed double clicking on desktop item.
Fixed hang on double clicking some desktop items.
Added forground label colour to prefs.
Updated to use pkg-config for lfstoolkit.
Going over to internal sysv msging.
Added back cli options that fell off!
Fixed endless loop when checking disk list.
Added cleandesktoprcs command to messaging.
Images (jpg/png) now show thumbnail on desktop.
Dropping text on desktop now creates text clipping file containing dropped text.
Fixed reseting icon on removing custom image.
Send "reloadprefs" via messaging to reload icon theme.
Send "reloaddesk" via messaging to restart desktop.
Send "reloadbg" via messaging to reload background.
Added System V messaging.
Fixed prefs font not being used.
Fixed background launch of desktop item.
Fixed wrong inotify events on file move/rename.
Added back label BG colour and alpha to prefs.
Added Home and Computer locatins to desktop.
Fixed mainloop hogging too much cpu time.
Code clean.
Added right border to prefs.
Better default placement.
No longer needs composite manager.